# aibuilder

./: README.md  TODO.md  main.py  pyproject.toml
agent-registry/: README.md  agentregistry.py  client.py  pyproject.toml  server.py
agentkit/: __init__.py  base.py  main.py  pyproject.toml
architect/: README.md  architect.py  pyproject.toml
coder/: README.md  coder.py  si_default.md  si_express.md  si_nextjs.md  si_node.md  si_python.md  si_react.md
devopsagent/: README.md  devops.py
orchestrator/: README.md  orchestrator.py  orchestrator_state.sqlite  pyproject.toml
qaagent/: qa.py
scripts/: e2e_env_manager_test.py  e2e_full_todo_flow.py  e2e_qa_agent_test.py  e2e_smoke_test.py  e2e_system_operator_test.py  pyproject.toml  test_coder_diff_flow.py
templates/: manifest.yaml
tmp_full_e2e_1755971535/: orchestrator_state.sqlite
tmp_full_e2e_1755971637/: orchestrator_state.sqlite
tmp_full_e2e_1755971637/workspace/templates/: manifest.yaml
tmp_full_e2e_1755971782/: orchestrator_state.sqlite
tmp_full_e2e_1755972047/: orchestrator_state.sqlite
tmp_full_e2e_1755972227/: orchestrator_state.sqlite
tmp_full_e2e_1755972332/: orchestrator_state.sqlite
tmp_full_e2e_1755972417/: orchestrator_state.sqlite
tmp_full_e2e_1755972417/workspace/todo-app/: docker-compose.yml
tmp_full_e2e_1755979050/: orchestrator_state.sqlite
tmp_full_e2e_1755979191/: orchestrator_state.sqlite
tmp_full_e2e_1755979251/: orchestrator_state.sqlite
tmp_full_e2e_1755979251/workspace/todo-app/: package-lock.json
(+1 files in other folders)
