[project]
name = "aibuilder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "fastmcp>=2.11.3",
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
    "starlette>=0.47.2",
    "uvicorn>=0.35.0",
]

[tool.setuptools]
# Treat this repository root as the single project. Expose all importable
# top-level packages so `uv run -m <pkg.module>` works consistently.
packages = [
    "agentkit",
    "architect",
    "devopsagent",
    "orchestrator",
    "coder",
]
